@@ -112,12 +112,12 @@ JAVA_OBJS = java/parse.o java/class.o java/decl.o java/expr.o \
   java/jcf-path.o java/xref.o java/boehm.o mkdeps.o
 
 GCJH_OBJS = java/gjavah.o java/jcf-io.o java/jcf-depend.o java/jcf-path.o \
-  java/zextract.o version.o mkdeps.o errors.o
+  java/zextract.o version.o mkdeps.o errors.o ggc-none.o
 
 JVSCAN_OBJS = java/parse-scan.o java/jv-scan.o version.o
 
 JCFDUMP_OBJS = java/jcf-dump.o java/jcf-io.o java/jcf-depend.o java/jcf-path.o \
-		java/zextract.o errors.o version.o mkdeps.o
+		java/zextract.o errors.o version.o mkdeps.o ggc-none.o
 
 JVGENMAIN_OBJS = java/jvgenmain.o java/mangle_name.o errors.o
 
@@ -264,7 +264,7 @@ java/parse.o: java/parse.c java/jcf-reader.c $(CONFIG_H) $(SYSTEM_H) \
   function.h $(JAVA_TREE_H) $(JAVA_LEX_C) java/parse.h java/lex.h $(GGC_H) \
   debug.h gt-java-parse.h gtype-java.h
 java/jcf-dump.o: $(CONFIG_H) $(SYSTEM_H) $(JAVA_TREE_H) java/jcf-dump.c \
-  java/jcf-reader.c java/jcf.h java/javaop.h java/javaop.def version.h
+  java/jcf-reader.c java/jcf.h java/javaop.h java/javaop.def version.h $(GGC_H)
 java/gjavah.o: $(CONFIG_H) $(SYSTEM_H) $(JAVA_TREE_H) java/gjavah.c \
   java/jcf-reader.c java/jcf.h java/javaop.h version.h
 java/boehm.o: java/boehm.c $(CONFIG_H) $(SYSTEM_H) $(TREE_H) $(JAVA_TREE_H) \
