@@ -48,6 +48,7 @@ The Free Software Foundation is independent of Sun Microsystems, Inc.  */
 
 #include "config.h"
 #include "system.h"
+#include "ggc.h"
 
 #include "jcf.h"
 #include "tree.h"
